# pyiwfm

./: .gitattributes  .gitignore  LICENSE  README.rst  environment.yml  index.md  pyproject.toml  run_server.sh  setup.cfg  setup.py
conda.recipe/: meta.yaml
dash/: iwfm_dash.py
dash/examples/: ex_animator.py  ex_dual_obs_animator_cg.py  ex_dual_obs_animator_fg.py  ex_dual_obs_animatory.py  ex_obs_animator.py  ex_obs_interpolate.py  head_calib_head_obs_nodes_cg.py  head_nodes_fg.py  head_obs_node_fg.py  trimesh_animator_cg.py  trimesh_animator_fg.py  trimesh_animator_fg_diff.py
docs/images/: c2vsim_cg_rmse.html
env-locks/: environment.win-64.lock.yml  requirements.win-64.lock.txt
pyiwfm/: __init__.py  __main__.py  _version.py  cli.py  ex_dual_animator.py  ex_dual_animator_cg.py  geo.py  gwh_obs_calib_tsplotter.py  gwh_obs_interpolater.py  gwh_obs_tsplotter.py  gwh_tsplotter.py  meshcalc.py  obsreader.py  reader.py  trimesh_animator.py
tests/: junit.xml  test_cli.py  test_obsreader.py  test_reader.py
